--- a/INTITA/Modules/ProfileSettings/Cells/InfoSettingProfileTableViewCell.xib
+++ b/INTITA/Modules/ProfileSettings/Cells/InfoSettingProfileTableViewCell.xib
@@ -9,61 +9,52 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="105" id="KGk-i7-Jjw" customClass="InfoSettingProfileTableViewCell" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="105"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="121" id="KGk-i7-Jjw" customClass="InfoSettingProfileTableViewCell" customModule="INTITA" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="473" height="181"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="105"/>
+                <rect key="frame" x="0.0" y="0.0" width="473" height="181"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4He-Dk-BPq">
-                        <rect key="frame" x="28" y="12" width="41.5" height="81"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some very long titlelllll" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4He-Dk-BPq">
+                        <rect key="frame" x="28" y="12" width="213" height="157"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="DFo-dt-Whx">
-                        <rect key="frame" x="85.5" y="4" width="261.5" height="97"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="y35-pw-ZQY">
+                        <rect key="frame" x="282" y="8" width="163" height="165"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y2P-yl-2AN">
-                                <rect key="frame" x="0.0" y="0.0" width="261.5" height="68"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Edit Mode Text Field" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y2P-yl-2AN">
+                                <rect key="frame" x="24" y="0.0" width="139" height="82.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dsa-Fu-TQj">
-                                <rect key="frame" x="0.0" y="68" width="261.5" height="29"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d9x-Ev-ToC">
-                                        <rect key="frame" x="0.0" y="0.0" width="244" height="29"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
-                                        <state key="normal" title="button">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zC0-gS-aVG">
-                                        <rect key="frame" x="252" y="0.0" width="9.5" height="29"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <state key="normal" image="skipArrow"/>
-                                    </button>
-                                </subviews>
-                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d9x-Ev-ToC">
+                                <rect key="frame" x="0.0" y="82.5" width="163" height="82.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
+                                <state key="normal" title="Edit Mode Select Button">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
                         </subviews>
-                        <constraints>
-                            <constraint firstItem="Y2P-yl-2AN" firstAttribute="leading" secondItem="DFo-dt-Whx" secondAttribute="leading" id="8u6-IT-fgs"/>
-                            <constraint firstAttribute="trailing" secondItem="Y2P-yl-2AN" secondAttribute="trailing" id="ErX-8P-A6c"/>
-                            <constraint firstAttribute="trailing" secondItem="dsa-Fu-TQj" secondAttribute="trailing" id="nJ7-bf-pq6"/>
-                            <constraint firstItem="dsa-Fu-TQj" firstAttribute="leading" secondItem="DFo-dt-Whx" secondAttribute="leading" id="xFP-uO-FNx"/>
-                        </constraints>
                     </stackView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zC0-gS-aVG">
+                        <rect key="frame" x="453" y="82" width="9.5" height="17.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <state key="normal" image="skipArrow"/>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="DFo-dt-Whx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="1OF-pB-zfJ"/>
+                    <constraint firstItem="y35-pw-ZQY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="1UM-SB-PMw"/>
+                    <constraint firstItem="4He-Dk-BPq" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.45" id="7IM-jy-Mkz"/>
                     <constraint firstItem="4He-Dk-BPq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="8wS-dD-K83"/>
-                    <constraint firstItem="DFo-dt-Whx" firstAttribute="leading" secondItem="4He-Dk-BPq" secondAttribute="trailing" constant="16" id="Lfa-11-9Ci"/>
-                    <constraint firstAttribute="trailing" secondItem="DFo-dt-Whx" secondAttribute="trailing" constant="28" id="N2e-pd-n1K"/>
-                    <constraint firstAttribute="bottom" secondItem="DFo-dt-Whx" secondAttribute="bottom" constant="4" id="OGf-FY-WG9"/>
+                    <constraint firstAttribute="bottom" secondItem="y35-pw-ZQY" secondAttribute="bottom" constant="8" id="JqS-Aw-izv"/>
+                    <constraint firstAttribute="right" secondItem="y35-pw-ZQY" secondAttribute="right" constant="28" id="R98-oa-EcW"/>
                     <constraint firstItem="4He-Dk-BPq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="TGU-4u-pAz"/>
+                    <constraint firstItem="zC0-gS-aVG" firstAttribute="leading" secondItem="y35-pw-ZQY" secondAttribute="trailing" constant="8" id="cmV-hw-kuB"/>
                     <constraint firstAttribute="bottom" secondItem="4He-Dk-BPq" secondAttribute="bottom" constant="12" id="nA2-4T-mVX"/>
+                    <constraint firstItem="zC0-gS-aVG" firstAttribute="centerY" secondItem="y35-pw-ZQY" secondAttribute="centerY" id="qAE-ti-xji"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -72,10 +63,9 @@
                 <outlet property="countryButton" destination="d9x-Ev-ToC" id="I1y-D8-39l"/>
                 <outlet property="infoTextField" destination="Y2P-yl-2AN" id="tAn-6r-4Ri"/>
                 <outlet property="rightButton" destination="zC0-gS-aVG" id="HjA-f4-rBO"/>
-                <outlet property="stackView" destination="dsa-Fu-TQj" id="IhD-5W-rCc"/>
                 <outlet property="titleLabel" destination="4He-Dk-BPq" id="MMd-Rd-nd7"/>
             </connections>
-            <point key="canvasLocation" x="9.4202898550724647" y="107.47767857142857"/>
+            <point key="canvasLocation" x="80.434782608695656" y="132.92410714285714"/>
         </tableViewCell>
     </objects>
     <resources>
