--- a/INTITA/Common/BirthdayScreen/Birthday.storyboard
+++ b/INTITA/Common/BirthdayScreen/Birthday.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,31 +18,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="N9U-HI-cOg">
-                                <rect key="frame" x="0.0" y="164" width="414" height="578"/>
+                                <rect key="frame" x="0.0" y="173" width="414" height="216"/>
                             </datePicker>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Birth selector" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F28-IV-f29">
-                                <rect key="frame" x="28" y="52" width="358" height="32"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="32" id="x4c-ZT-via"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Birth selector" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F28-IV-f29">
+                                <rect key="frame" x="28" y="68" width="358" height="31"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="26"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O1V-DA-YW6">
-                                <rect key="frame" x="266" y="774" width="120" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O1V-DA-YW6">
+                                <rect key="frame" x="28" y="783" width="358" height="55"/>
+                                <color key="backgroundColor" name="mainColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="NBj-zS-NHe"/>
-                                    <constraint firstAttribute="height" constant="40" id="Nmv-iv-nbl"/>
+                                    <constraint firstAttribute="height" constant="55" id="itp-Ns-SKA"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="29"/>
-                                <state key="normal" title="Done"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="doneButtonTapped:" destination="O82-RC-vw9" eventType="touchUpInside" id="Jc2-ZG-bLM"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L5X-IH-3RI">
+                                <rect key="frame" x="167" y="117" width="80" height="2"/>
+                                <color key="backgroundColor" name="mainColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="O1F-T7-VRR"/>
+                                    <constraint firstAttribute="width" constant="80" id="sWU-EL-DPR"/>
+                                </constraints>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obb-tl-9Qs">
-                                <rect key="frame" x="28" y="108" width="358" height="24"/>
+                                <rect key="frame" x="28" y="137" width="358" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="yW7-UP-6Jl"/>
                                 </constraints>
@@ -55,23 +63,27 @@
                         <constraints>
                             <constraint firstItem="V2g-p9-Xgz" firstAttribute="trailing" secondItem="obb-tl-9Qs" secondAttribute="trailing" constant="28" id="1TO-jD-1WH"/>
                             <constraint firstItem="V2g-p9-Xgz" firstAttribute="trailing" secondItem="N9U-HI-cOg" secondAttribute="trailing" id="8XL-rr-DwE"/>
-                            <constraint firstItem="O1V-DA-YW6" firstAttribute="top" secondItem="N9U-HI-cOg" secondAttribute="bottom" constant="32" id="93J-gm-Acr"/>
                             <constraint firstItem="V2g-p9-Xgz" firstAttribute="trailing" secondItem="F28-IV-f29" secondAttribute="trailing" constant="28" id="BqI-Tb-D0F"/>
                             <constraint firstItem="obb-tl-9Qs" firstAttribute="leading" secondItem="V2g-p9-Xgz" secondAttribute="leading" constant="28" id="F5B-jd-LDS"/>
-                            <constraint firstItem="obb-tl-9Qs" firstAttribute="top" secondItem="F28-IV-f29" secondAttribute="bottom" constant="24" id="G2S-Nd-iy5"/>
                             <constraint firstItem="F28-IV-f29" firstAttribute="leading" secondItem="V2g-p9-Xgz" secondAttribute="leading" constant="28" id="Nkf-IR-NWz"/>
                             <constraint firstItem="N9U-HI-cOg" firstAttribute="leading" secondItem="JR2-Og-pS5" secondAttribute="leading" id="QhB-NJ-Zsx"/>
-                            <constraint firstItem="F28-IV-f29" firstAttribute="top" secondItem="V2g-p9-Xgz" secondAttribute="top" constant="8" id="SHM-fw-IwY"/>
-                            <constraint firstItem="N9U-HI-cOg" firstAttribute="top" secondItem="obb-tl-9Qs" secondAttribute="bottom" constant="32" id="ok0-hg-OeX"/>
-                            <constraint firstItem="V2g-p9-Xgz" firstAttribute="trailing" secondItem="O1V-DA-YW6" secondAttribute="trailing" constant="28" id="yBu-TZ-tJW"/>
-                            <constraint firstItem="V2g-p9-Xgz" firstAttribute="bottom" secondItem="O1V-DA-YW6" secondAttribute="bottom" constant="48" id="zwp-oc-oWm"/>
+                            <constraint firstItem="F28-IV-f29" firstAttribute="top" secondItem="V2g-p9-Xgz" secondAttribute="top" constant="24" id="SHM-fw-IwY"/>
+                            <constraint firstItem="O1V-DA-YW6" firstAttribute="leading" secondItem="V2g-p9-Xgz" secondAttribute="leading" constant="28" id="WTI-vn-3JD"/>
+                            <constraint firstItem="obb-tl-9Qs" firstAttribute="top" secondItem="L5X-IH-3RI" secondAttribute="bottom" constant="18" id="bAg-2H-b0N"/>
+                            <constraint firstItem="L5X-IH-3RI" firstAttribute="top" secondItem="F28-IV-f29" secondAttribute="bottom" constant="18" id="edy-ui-bCP"/>
+                            <constraint firstItem="O1V-DA-YW6" firstAttribute="top" relation="greaterThanOrEqual" secondItem="N9U-HI-cOg" secondAttribute="bottom" constant="16" id="gCw-Du-LzW"/>
+                            <constraint firstItem="V2g-p9-Xgz" firstAttribute="trailing" secondItem="O1V-DA-YW6" secondAttribute="trailing" constant="28" id="hFG-Lb-oCi"/>
+                            <constraint firstItem="N9U-HI-cOg" firstAttribute="top" secondItem="obb-tl-9Qs" secondAttribute="bottom" constant="12" id="mAM-nW-uIG"/>
+                            <constraint firstItem="O1V-DA-YW6" firstAttribute="centerX" secondItem="JR2-Og-pS5" secondAttribute="centerX" id="n0a-Zu-7ej"/>
+                            <constraint firstItem="V2g-p9-Xgz" firstAttribute="bottom" secondItem="O1V-DA-YW6" secondAttribute="bottom" constant="24" id="nH8-x4-fc2"/>
+                            <constraint firstItem="L5X-IH-3RI" firstAttribute="centerX" secondItem="JR2-Og-pS5" secondAttribute="centerX" id="qcf-O8-bNQ"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="birthdaySelectorLabel" destination="F28-IV-f29" id="Bjs-by-5Th"/>
                         <outlet property="currentBirthdayLabel" destination="obb-tl-9Qs" id="16y-O3-SN3"/>
                         <outlet property="datePicker" destination="N9U-HI-cOg" id="xwL-Cj-UQn"/>
                         <outlet property="doneButton" destination="O1V-DA-YW6" id="Ik2-rg-CFf"/>
-                        <outlet property="nameScreenLabel" destination="F28-IV-f29" id="Bjs-by-5Th"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xGT-74-eLs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -80,6 +92,9 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="mainColor">
+            <color red="0.29399999976158142" green="0.45899999141693115" blue="0.64300000667572021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
